todo/manifests/service-postgres-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: project
  labels:
    app: postgres
spec:
  clusterIP: None
  selector:
    app: postgresapp
  ports:
  - port: 5432
    name: postgressql
    protocol: TCP
