todo/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  type: ClusterIP
  selector:
    app: todo
  ports:
    - name: todo1111
      protocol: TCP
      port: 1111
      targetPort: 8888
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8888
